code cleanup; refactored Sinus to Sine; unified app&package names in meta-files

--- a/CardioDataViewer/res/values/strings.xml
+++ b/CardioDataViewer/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SinusTest</string>
+    <string name="app_name">CardioDataViewer</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
