--- a/CardioDataViewer/res/values/strings.xml
+++ b/CardioDataViewer/res/values/strings.xml
@@ -2,7 +2,12 @@
 <resources>
 
     <string name="app_name">CardioDataViewer</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    
+    <string name="OK">OK</string>
+    <string name="Cancel">Cancel</string>
+    
+    <string name="serverAddress">Server Address</string>
+    <string name="serverPort">Server Port</string>
+    <string name="enterServerAddressAndPortPrompt">Please enter the address and port of the server, which provides the cardiovascular data.</string>
 
 </resources>
