--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">CardioApp</string>
-    <string name="start_stop_button">Start</string>
+    <string name="start_stop_button_start">Start</string>
+    <string name="start_stop_button_stop">Stop</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
 
